cmake_minimum_required(VERSION 3.5)
project(bridge)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_FLAGS "-Wall -Werror -g -O2 -fPIC")
set(EXAMPLE_ROOT "${CMAKE_CURRENT_SOURCE_DIR}")

file(GLOB EXAMPLE_SRC *.cpp)
foreach(SRC ${EXAMPLE_SRC})
    get_filename_component(FILE ${SRC} NAME)
    get_filename_component(EXE ${FILE} NAME_WE)
    add_executable(${EXE} ${FILE})
    target_link_libraries(${EXE} pthread)
    install(TARGETS ${EXE} DESTINATION "${EXAMPLE_ROOT}/bin")
endforeach(SRC ${EXAMPLE_SRC})
